--- a/Core/Core.vcxproj.filters
+++ b/Core/Core.vcxproj.filters
@@ -763,6 +763,9 @@
     <ClInclude Include="Bmc63.h">
       <Filter>Nes\Mappers</Filter>
     </ClInclude>
+    <ClInclude Include="BmcS2009.h">
+      <Filter>Nes\Mappers</Filter>
+    </ClInclude>
     <ClInclude Include="JyCompany.h">
       <Filter>Nes\Mappers</Filter>
     </ClInclude>
