--- a/Core/Core.vcxproj
+++ b/Core/Core.vcxproj
@@ -540,6 +540,8 @@
     <ClInclude Include="BaseSoundManager.h" />
     <ClInclude Include="BatteryManager.h" />
     <ClInclude Include="BattleBox.h" />
+    <ClInclude Include="Bmc1024CA1.h" />
+    <ClInclude Include="Bmc830134C.h" />
     <ClInclude Include="Bmc60311C.h" />
     <ClInclude Include="Bmc80013B.h" />
     <ClInclude Include="Bmc8157.h" />
