--- a/Core/Core.vcxproj
+++ b/Core/Core.vcxproj
@@ -553,6 +553,7 @@
     <ClInclude Include="BmcHpxx.h" />
     <ClInclude Include="BmcK3046.h" />
     <ClInclude Include="BmcS2009.h" />
+    <ClInclude Include="BmcSa005A.h" />
     <ClInclude Include="BmcCtc09.h" />
     <ClInclude Include="CityFighter.h" />
     <ClInclude Include="ConsolePauseHelper.h" />
