--- a/Core/Core.vcxproj.filters
+++ b/Core/Core.vcxproj.filters
@@ -1483,6 +1483,9 @@
     <ClInclude Include="MMC3_395.h">
       <Filter>Nes\Mappers\MMC</Filter>
     </ClInclude>
+    <ClInclude Include="MMC3_401.h">
+      <Filter>Nes\Mappers\MMC</Filter>
+    </ClInclude>
     <ClInclude Include="MMC3_267.h">
       <Filter>Nes\Mappers\MMC</Filter>
     </ClInclude>
