--- a/Core/Core.vcxproj.filters
+++ b/Core/Core.vcxproj.filters
@@ -1513,6 +1513,9 @@
     <ClInclude Include="MMC3_441.h">
       <Filter>Nes\Mappers\MMC</Filter>
     </ClInclude>
+    <ClInclude Include="MMC3_445.h">
+      <Filter>Nes\Mappers\MMC</Filter>
+    </ClInclude>
     <ClInclude Include="FamicomBox.h">
       <Filter>Nes\Mappers\Unif</Filter>
     </ClInclude>
