--- a/Core/Core.vcxproj.filters
+++ b/Core/Core.vcxproj.filters
@@ -970,6 +970,9 @@
     <ClInclude Include="Mapper403.h">
       <Filter>Nes\Mappers\Unnamed</Filter>
     </ClInclude>
+    <ClInclude Include="Mapper402.h">
+      <Filter>Nes\Mappers\Unnamed</Filter>
+    </ClInclude>
     <ClInclude Include="A12Watcher.h">
       <Filter>Nes\Mappers</Filter>
     </ClInclude>
