--- a/Core/Core.vcxproj.filters
+++ b/Core/Core.vcxproj.filters
@@ -1561,6 +1561,9 @@
     <ClInclude Include="MMC3_395.h">
       <Filter>Nes\Mappers\MMC</Filter>
     </ClInclude>
+    <ClInclude Include="MMC3_399.h">
+      <Filter>Nes\Mappers\MMC</Filter>
+    </ClInclude>
     <ClInclude Include="MMC3_401.h">
       <Filter>Nes\Mappers\MMC</Filter>
     </ClInclude>
