--- a/Core/Core.vcxproj.filters
+++ b/Core/Core.vcxproj.filters
@@ -1504,6 +1504,9 @@
     <ClInclude Include="Mapper380.h">
       <Filter>Nes\Mappers\Unnamed</Filter>
     </ClInclude>
+    <ClInclude Include="Mapper382.h">
+      <Filter>Nes\Mappers\Unnamed</Filter>
+    </ClInclude>
     <ClInclude Include="Mapper389.h">
       <Filter>Nes\Mappers\Unnamed</Filter>
     </ClInclude>
