--- a/Core/Core.vcxproj.filters
+++ b/Core/Core.vcxproj.filters
@@ -1549,6 +1549,9 @@
     <ClInclude Include="MMC3_353.h">
       <Filter>Nes\Mappers\MMC</Filter>
     </ClInclude>
+    <ClInclude Include="MMC3_361.h">
+      <Filter>Nes\Mappers\MMC</Filter>
+    </ClInclude>
     <ClInclude Include="MMC3_364.h">
       <Filter>Nes\Mappers\MMC</Filter>
     </ClInclude>
