--- a/Core/Core.vcxproj.filters
+++ b/Core/Core.vcxproj.filters
@@ -958,6 +958,9 @@
     <ClInclude Include="Mapper253.h">
       <Filter>Nes\Mappers\Unnamed</Filter>
     </ClInclude>
+    <ClInclude Include="Mapper271.h">
+      <Filter>Nes\Mappers\Unnamed</Filter>
+    </ClInclude>
     <ClInclude Include="Sachen_136.h">
       <Filter>Nes\Mappers\Sachen</Filter>
     </ClInclude>
