--- a/Core/Core.vcxproj
+++ b/Core/Core.vcxproj
@@ -769,7 +769,7 @@
     <ClInclude Include="Mapper183.h" />
     <ClInclude Include="Mapper253.h" />
     <ClInclude Include="Mapper271.h" />
-        <ClInclude Include="Mapper541.h" />
+    <ClInclude Include="Mapper541.h" />
     <ClInclude Include="Mapper43.h" />
     <ClInclude Include="Mapper83.h" />
     <ClInclude Include="Mapper319.h" />
@@ -801,6 +801,7 @@
     <ClInclude Include="Mapper400.h" />
     <ClInclude Include="Mapper449.h" />
     <ClInclude Include="Mapper452.h" />
+    <ClInclude Include="Mapper523.h" />
     <ClInclude Include="Mapper538.h" />
     <ClInclude Include="Mapper540.h" />
     <ClInclude Include="Mapper556.h" />
@@ -1068,6 +1069,7 @@
     <ClInclude Include="Waixing164.h" />
     <ClInclude Include="Waixing178.h" />
     <ClInclude Include="Waixing252.h" />
+    <ClInclude Include="WaixingFS005.h" />
     <ClInclude Include="WaveRecorder.h" />
     <ClInclude Include="Yoko.h" />
     <ClInclude Include="Zapper.h" />
