Add mapper 439 (BMC-DS-07)

--- a/Core/Core.vcxproj
+++ b/Core/Core.vcxproj
@@ -557,6 +557,7 @@
     <ClInclude Include="BmcTj03.h" />
     <ClInclude Include="BmcCtc09.h" />
     <ClInclude Include="BmcCtc12in1.h" />
+    <ClInclude Include="BmcDs07.h" />
     <ClInclude Include="Bmc891227.h" />
     <ClInclude Include="Ctc15.h" />
     <ClInclude Include="CityFighter.h" />
