--- a/Core/Core.vcxproj.filters
+++ b/Core/Core.vcxproj.filters
@@ -820,6 +820,9 @@
     <ClInclude Include="MMC3_516.h">
       <Filter>Nes\Mappers\MMC</Filter>
     </ClInclude>
+    <ClInclude Include="MMC3_512.h">
+      <Filter>Nes\Mappers\MMC</Filter>
+    </ClInclude>
     <ClInclude Include="Waixing178.h">
       <Filter>Nes\Mappers\Waixing</Filter>
     </ClInclude>
