--- a/Core/Core.vcxproj.filters
+++ b/Core/Core.vcxproj.filters
@@ -1549,6 +1549,9 @@
     <ClInclude Include="Mapper360.h">
       <Filter>Nes\Mappers\Unnamed</Filter>
     </ClInclude>
+    <ClInclude Include="Mapper362.h">
+      <Filter>Nes\Mappers\Unnamed</Filter>
+    </ClInclude>
     <ClInclude Include="Mapper375.h">
       <Filter>Nes\Mappers\Unnamed</Filter>
     </ClInclude>
